--- a/index.html
+++ b/index.html
@@ -9,42 +9,47 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<!-- row-cols-1 row-cols-lg- g-5  -->
 
 <body>
+    <!-- header section start -->
     <header>
         <div class="container">
             <h1 class="text-center m-5">Money Mart</h1>
         </div>
     </header>
     <main>
+        <!-- content section start -->
         <section>
             <div class="container">
-                <div class="row text-center">
+                <div class="row row-cols-1 row-cols-lg-2 g-5 text-center ">
                     <div class="col">
                         <img class="img-fluid w-100 h-100" src="images/image=1.jpg" alt="">
                     </div>
-                    <div class="col bg-light">
+                    <div class="col bg-light pt-5">
                         <div>
                             <h4 class="">Income</h4>
-                            <div class="width my-3 d-flex justify-content-between align-items-center">
+                            <div class="width my-3 d-flex justify-content-between align-items-center position-relative">
                                 <span class="">Income:</span>
-                                <input id="total-income" type="text" value="">
+                                <input id="total-income" type="text" placeholder="Enter total income">
+                                <span class="error">please enter numbers</span>
                             </div>
                         </div>
                         <div>
                             <h4 class="mb-3">Expenses</h4>
-                            <div class="width d-flex justify-content-between align-items-center">
+                            <div class="width d-flex justify-content-between align-items-center position-relative">
                                 <span class="">Food:</span>
-                                <input id="total-food-cost" type="text" value="">
+                                <input id="total-food-cost" type="text" placeholder="Enter food cost">
+                                <span class="error">please enter numbers</span>
                             </div>
-                            <div class="width my-3 d-flex justify-content-between align-items-center">
+                            <div class="width my-3 d-flex justify-content-between align-items-center position-relative">
                                 <span class="">Rent:</span>
-                                <input id="total-rent-cost" type="text" value="">
+                                <input id="total-rent-cost" type="text" placeholder="Enter rent cost">
+                                <span class="error">please enter numbers</span>
                             </div>
-                            <div class="width d-flex justify-content-between align-items-center">
+                            <div class="width d-flex justify-content-between align-items-center position-relative">
                                 <span class="">Clothes:</span>
-                                <input id="total-cloth-cost" type="text" value="">
+                                <input id="total-cloth-cost" type="text" placeholder="Enter cloth cost">
+                                <span class="error">please enter numbers</span>
                             </div>
                             <div>
                                 <button id="calculate-btn" class="py-2 px-5 border-0 fs-5 my-4 ms-5">Calculate</button>
@@ -55,7 +60,8 @@
                         <div>
                             <div class="my-3">
                                 <span>Save:</span>
-                                <input id="total-parcentage-input" type="text" class="px-3 py-1 mx-2 text-center">
+                                <input id="total-parcentage-input" type="text" placeholder="parcent"
+                                    class="px-3 py-1 mx-2 text-center">
                                 <span>%</span>
                                 <button id="save-btn" class="border-0 px-4 py-1 ms-2">Save</button>
                             </div>
