--- a/index.html
+++ b/index.html
@@ -50,18 +50,21 @@
                                 <span class="">Clothes:</span>
                                 <input id="total-cloth-cost" type="text" placeholder="Enter cloth cost">
                                 <span class="error">please enter numbers</span>
+
                             </div>
-                            <div>
+                            <div class="position-relative">
                                 <button id="calculate-btn" class="py-2 px-5 border-0 fs-5 my-4 ms-5">Calculate</button>
+                                <span id="error">please enter valid number</span>
                             </div>
                             <h5 class="mb-2">Total Expenses: <span id="total-expenses">00</span> </h5>
                             <h5>Balance: <span id="balance">00</span></h5>
                         </div>
                         <div>
-                            <div class="my-3">
+                            <div class="my-3 position-relative">
                                 <span>Save:</span>
                                 <input id="total-parcentage-input" type="text" placeholder="parcent"
                                     class="px-3 py-1 mx-2 text-center">
+                                <span class="error ms-5">please enter numbers</span>
                                 <span>%</span>
                                 <button id="save-btn" class="border-0 px-4 py-1 ms-2">Save</button>
                             </div>
